# heightmap-manipulations

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  save_png.c
lib/: heightmap.c  heightmap.h
